added gap-days for visualization

--- a/tests/genetic_matching_new_format.ipynb
+++ b/tests/genetic_matching_new_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "6574832d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "03b6fd19",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
+   "id": "84cd66c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_gaps_between_tasks(results_df):\n",
+    "    \"\"\"\n",
+    "    Calculate gaps between tasks for each person\n",
+    "    Returns a dictionary with person_id as key and total gap days as value\n",
+    "    \"\"\"\n",
+    "    gaps_per_person = {}\n",
+    "    \n",
+    "    # Group tasks by person\n",
+    "    for person_id in results_df['person_id'].unique():\n",
+    "        if person_id == 'Unassigned':\n",
+    "            continue\n",
+    "            \n",
+    "        person_tasks = results_df[results_df['person_id'] == person_id].copy()\n",
+    "        person_tasks['start_dt'] = pd.to_datetime(person_tasks['start_date'], format='%d.%m.%y')\n",
+    "        person_tasks['end_dt'] = pd.to_datetime(person_tasks['end_date'], format='%d.%m.%y')\n",
+    "        \n",
+    "        # Sort by start date\n",
+    "        person_tasks = person_tasks.sort_values('start_dt')\n",
+    "        \n",
+    "        total_gaps = 0\n",
+    "        \n",
+    "        # Calculate gaps between consecutive tasks\n",
+    "        for i in range(len(person_tasks) - 1):\n",
+    "            current_task_end = person_tasks.iloc[i]['end_dt']\n",
+    "            next_task_start = person_tasks.iloc[i + 1]['start_dt']\n",
+    "            \n",
+    "            # If there's a gap (next task starts after current task ends)\n",
+    "            if next_task_start > current_task_end:\n",
+    "                gap_days = (next_task_start - current_task_end).days\n",
+    "                total_gaps += gap_days\n",
+    "        \n",
+    "        gaps_per_person[person_id] = total_gaps\n",
+    "    \n",
+    "    return gaps_per_person"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "04b62a2c",
    "metadata": {},
    "outputs": [],
@@ -252,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "id": "c8eff53b",
    "metadata": {},
    "outputs": [],
@@ -308,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "id": "52aa8e50",
    "metadata": {},
    "outputs": [],
@@ -410,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "id": "2c877ed8",
    "metadata": {},
    "outputs": [],
@@ -462,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "id": "c02d103e",
    "metadata": {},
    "outputs": [
@@ -533,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "id": "5e0d9da1",
    "metadata": {},
    "outputs": [
@@ -550,13 +593,13 @@
       "Population size: 50\n",
       "Generations: 100\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-6321.9, Avg=-10086.2\n",
-      "Generation 20: Best=275.0, Avg=-1515.6\n",
-      "Generation 40: Best=473.5, Avg=-1237.3\n",
-      "Generation 60: Best=473.5, Avg=-1492.0\n",
-      "Generation 80: Best=473.5, Avg=-1486.7\n",
-      "Generation 99: Best=473.5, Avg=-1122.5\n",
-      "Execution time: 6.119 seconds\n",
+      "Generation 0: Best=-7015.1, Avg=-9910.7\n",
+      "Generation 20: Best=473.5, Avg=-1233.4\n",
+      "Generation 40: Best=473.5, Avg=-968.8\n",
+      "Generation 60: Best=473.5, Avg=-1242.1\n",
+      "Generation 80: Best=473.5, Avg=-1021.2\n",
+      "Generation 99: Best=473.5, Avg=-953.3\n",
+      "Execution time: 5.903 seconds\n",
       "Best fitness: 473.5\n",
       "Found assignments: 14\n",
       "\n",
@@ -566,16 +609,16 @@
       "Population size: 100\n",
       "Generations: 150\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-5934.1, Avg=-9774.2\n",
-      "Generation 20: Best=280.0, Avg=-284.1\n",
-      "Generation 40: Best=283.0, Avg=-227.0\n",
-      "Generation 60: Best=283.0, Avg=-190.4\n",
-      "Generation 80: Best=283.0, Avg=-395.1\n",
-      "Generation 100: Best=283.0, Avg=-333.5\n",
-      "Generation 120: Best=283.0, Avg=-190.9\n",
-      "Generation 140: Best=283.0, Avg=-342.4\n",
-      "Generation 149: Best=283.0, Avg=-255.9\n",
-      "Execution time: 17.867 seconds\n",
+      "Generation 0: Best=-4788.1, Avg=-9323.7\n",
+      "Generation 20: Best=281.0, Avg=-334.6\n",
+      "Generation 40: Best=283.0, Avg=-236.1\n",
+      "Generation 60: Best=283.0, Avg=-270.8\n",
+      "Generation 80: Best=283.0, Avg=-262.2\n",
+      "Generation 100: Best=283.0, Avg=-358.9\n",
+      "Generation 120: Best=283.0, Avg=-378.0\n",
+      "Generation 140: Best=283.0, Avg=-348.6\n",
+      "Generation 149: Best=283.0, Avg=-236.5\n",
+      "Execution time: 17.022 seconds\n",
       "Best fitness: 283.0\n",
       "Found assignments: 14\n",
       "\n",
@@ -585,18 +628,18 @@
       "Population size: 75\n",
       "Generations: 200\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-5814.3, Avg=-9464.8\n",
-      "Generation 20: Best=273.5, Avg=-2459.4\n",
-      "Generation 40: Best=275.0, Avg=-2568.0\n",
-      "Generation 60: Best=281.0, Avg=-2456.3\n",
-      "Generation 80: Best=281.0, Avg=-2529.0\n",
-      "Generation 100: Best=283.0, Avg=-2841.5\n",
-      "Generation 120: Best=283.0, Avg=-2227.2\n",
-      "Generation 140: Best=283.0, Avg=-2457.5\n",
-      "Generation 160: Best=283.0, Avg=-2235.7\n",
-      "Generation 180: Best=283.0, Avg=-2331.0\n",
-      "Generation 199: Best=283.0, Avg=-2450.4\n",
-      "Execution time: 17.471 seconds\n",
+      "Generation 0: Best=-6891.3, Avg=-9457.9\n",
+      "Generation 20: Best=81.0, Avg=-3172.6\n",
+      "Generation 40: Best=279.0, Avg=-2484.4\n",
+      "Generation 60: Best=283.0, Avg=-2665.5\n",
+      "Generation 80: Best=283.0, Avg=-2288.6\n",
+      "Generation 100: Best=283.0, Avg=-2714.6\n",
+      "Generation 120: Best=283.0, Avg=-2354.4\n",
+      "Generation 140: Best=283.0, Avg=-2493.7\n",
+      "Generation 160: Best=283.0, Avg=-3298.2\n",
+      "Generation 180: Best=283.0, Avg=-2241.0\n",
+      "Generation 199: Best=283.0, Avg=-2403.2\n",
+      "Execution time: 16.430 seconds\n",
       "Best fitness: 283.0\n",
       "Found assignments: 14\n",
       "\n",
@@ -619,7 +662,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
+   "id": "910d1c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate gaps and add to results\n",
+    "gaps_per_person = calculate_gaps_between_tasks(results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b5b6a7b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add gap information to each result\n",
+    "for i, row in results_df.iterrows():\n",
+    "    person_id = row['person_id']\n",
+    "    if person_id in gaps_per_person:\n",
+    "        results_df.at[i, 'total_gaps_days'] = gaps_per_person[person_id]\n",
+    "    else:\n",
+    "        results_df.at[i, 'total_gaps_days'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "622324fa",
    "metadata": {},
    "outputs": [
@@ -636,9 +706,9 @@
       "     E(ntwicklung)                   E    Vogel, Peter           3.50   01.10.25 31.01.26\n",
       "     F(einplanung)                   F    Braun, Maria           1.00   01.06.26 30.04.27\n",
       "G(renzwertanalyse)                   G    Braun, Maria           5.00   01.11.25 31.08.26\n",
-      "     H(ilfesystem)                   H    Becker, Anna           5.00   01.07.26 31.08.27\n",
+      "     H(ilfesystem)                   H   Wagner, Lukas           5.00   01.07.26 31.08.27\n",
       " I(mplementierung)                   I    Becker, Anna           3.00   01.12.26 30.06.27\n",
-      "      J(ustierung)                   J    Becker, Anna           4.00   01.11.26 31.08.27\n",
+      "      J(ustierung)                   J    Braun, Maria           4.00   01.11.26 31.08.27\n",
       "K(onzeptionierung)                   K   Keller, Jonas           3.00   01.01.27 31.05.27\n",
       "        L(abeling)                   L Hoffmann, Laura           4.50   01.10.26 31.08.27\n",
       " M(L-Modellierung)                   M    Braun, Maria           3.00   01.12.26 31.08.27\n",
@@ -656,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "id": "08f08890",
    "metadata": {},
    "outputs": [
@@ -672,6 +742,39 @@
     "# Save results to CSV\n",
     "results_df.to_csv(\"matching_ergebnis_new_format.csv\", index=False)\n",
     "print(\"Results saved to matching_ergebnis_new_format.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "12cefbd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gap Analysis:\n",
+      "==================================================\n",
+      "Becker, Anna: 0 days of gaps\n",
+      "Wagner, Lukas: 0 days of gaps\n",
+      "Keller, Jonas: 151 days of gaps\n",
+      "Vogel, Peter: 0 days of gaps\n",
+      "Braun, Maria: 0 days of gaps\n",
+      "Hoffmann, Laura: 0 days of gaps\n",
+      "Total gaps across all employees: 151 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print gap summary\n",
+    "print(\"\\nGap Analysis:\")\n",
+    "print(\"=\"*50)\n",
+    "for person_id, gap_days in gaps_per_person.items():\n",
+    "    person_name = results_df[results_df['person_id'] == person_id]['name'].iloc[0]\n",
+    "    print(f\"{person_name}: {gap_days} days of gaps\")\n",
+    "print(f\"Total gaps across all employees: {sum(gaps_per_person.values())} days\")"
    ]
   }
  ],
