added more penalty when there is a gap and prioritizing solutions with fewer gaps

--- a/tests/genetic_matching_new_format.ipynb
+++ b/tests/genetic_matching_new_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "id": "6574832d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "id": "03b6fd19",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "id": "84cd66c1",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "id": "04b62a2c",
    "metadata": {},
    "outputs": [],
@@ -290,12 +290,32 @@
     "    total_workload = project_df['person_months'].sum()\n",
     "    coverage_bonus = (assigned_workload / total_workload) * 1000\n",
     "\n",
-    "    return total_score + coverage_bonus - constraint_penalty"
+    "    # Add gap penalty calculation\n",
+    "    gap_penalty = 0\n",
+    "    for person_id in monthly_availability:\n",
+    "        person_tasks = []\n",
+    "        for task_idx, person_idx in enumerate(assignment):\n",
+    "            if person_idx < len(personnel_df) and personnel_df.iloc[person_idx]['id'] == person_id:\n",
+    "                task = project_df.iloc[task_idx]\n",
+    "                person_tasks.append({\n",
+    "                    'start_dt': task['start_dt'],\n",
+    "                    'end_dt': task['end_dt']\n",
+    "                })\n",
+    "        \n",
+    "        # Calculate gaps for this person\n",
+    "        if len(person_tasks) > 1:\n",
+    "            person_tasks.sort(key=lambda x: x['start_dt'])\n",
+    "            for i in range(len(person_tasks) - 1):\n",
+    "                if person_tasks[i+1]['start_dt'] > person_tasks[i]['end_dt']:\n",
+    "                    gap_days = (person_tasks[i+1]['start_dt'] - person_tasks[i]['end_dt']).days\n",
+    "                    gap_penalty += gap_days * 0.5  # Penalty per gap day\n",
+    "    \n",
+    "    return total_score + coverage_bonus - constraint_penalty - gap_penalty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "id": "c8eff53b",
    "metadata": {},
    "outputs": [],
@@ -351,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 72,
    "id": "52aa8e50",
    "metadata": {},
    "outputs": [],
@@ -453,21 +473,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "id": "2c877ed8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def genetic_matching_with_elite_new_format(project_df, personnel_df, population_size=100, generations=200):\n",
-    "    \"\"\"\n",
-    "    Enhanced genetic algorithm with elite preservation and adaptive parameters\n",
-    "    \"\"\"\n",
     "    print(\"\\n=== Enhanced Genetic Algorithm (New Format) ===\")\n",
     "    start_time = time.time()\n",
     "    \n",
     "    # Run multiple times with different parameters and keep best result\n",
     "    best_result = None\n",
     "    best_fitness = float('-inf')\n",
+    "    best_gap_score = float('inf')  # Track gap performance\n",
     "    \n",
     "    # Parameter combinations to try\n",
     "    param_combinations = [\n",
@@ -482,22 +500,29 @@
     "            project_df, personnel_df, **params\n",
     "        )\n",
     "        \n",
-    "        # Calculate fitness of this result\n",
+    "        # Calculate fitness and gap score\n",
     "        assignment = []\n",
     "        for result in results:\n",
     "            task_idx = project_df[project_df['ap_code'] == result['task_id']].index[0]\n",
     "            person_idx = personnel_df[personnel_df['id'] == result['person_id']].index[0]\n",
     "            assignment.append(person_idx)\n",
     "        \n",
-    "        # Pad assignment if needed\n",
     "        while len(assignment) < len(project_df):\n",
     "            assignment.append(random.randint(0, len(personnel_df) - 1))\n",
     "        \n",
     "        fitness = calculate_fitness_new_format(assignment, project_df, personnel_df)\n",
     "        \n",
-    "        if fitness > best_fitness:\n",
+    "        # Calculate gap score for this result\n",
+    "        results_df_temp = pd.DataFrame(results)\n",
+    "        gaps_per_person = calculate_gaps_between_tasks(results_df_temp)\n",
+    "        total_gaps = sum(gaps_per_person.values())\n",
+    "        \n",
+    "        # Keep result with better gap performance if fitness is similar\n",
+    "        if fitness > best_fitness or (fitness >= best_fitness * 0.95 and total_gaps < best_gap_score):\n",
     "            best_fitness = fitness\n",
+    "            best_gap_score = total_gaps\n",
     "            best_result = results\n",
+    "            print(f\"New best result: fitness={fitness:.1f}, gaps={total_gaps}\")\n",
     "    \n",
     "    execution_time = time.time() - start_time\n",
     "    return best_result, execution_time"
@@ -505,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "id": "c02d103e",
    "metadata": {},
    "outputs": [
@@ -576,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "5e0d9da1",
+   "execution_count": 75,
+   "id": "651919b6",
    "metadata": {},
    "outputs": [
     {
@@ -593,15 +618,16 @@
       "Population size: 50\n",
       "Generations: 100\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-7015.1, Avg=-9910.7\n",
-      "Generation 20: Best=473.5, Avg=-1233.4\n",
-      "Generation 40: Best=473.5, Avg=-968.8\n",
-      "Generation 60: Best=473.5, Avg=-1242.1\n",
-      "Generation 80: Best=473.5, Avg=-1021.2\n",
-      "Generation 99: Best=473.5, Avg=-953.3\n",
-      "Execution time: 5.903 seconds\n",
-      "Best fitness: 473.5\n",
+      "Generation 0: Best=-5936.5, Avg=-9664.0\n",
+      "Generation 20: Best=281.0, Avg=-1414.8\n",
+      "Generation 40: Best=283.0, Avg=-1240.8\n",
+      "Generation 60: Best=283.0, Avg=-1004.7\n",
+      "Generation 80: Best=283.0, Avg=-1205.1\n",
+      "Generation 99: Best=283.0, Avg=-1336.7\n",
+      "Execution time: 13.413 seconds\n",
+      "Best fitness: 283.0\n",
       "Found assignments: 14\n",
+      "New best result: fitness=283.0, gaps=0\n",
       "\n",
       "Trying parameter set 2/3\n",
       "\n",
@@ -609,18 +635,19 @@
       "Population size: 100\n",
       "Generations: 150\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-4788.1, Avg=-9323.7\n",
-      "Generation 20: Best=281.0, Avg=-334.6\n",
-      "Generation 40: Best=283.0, Avg=-236.1\n",
-      "Generation 60: Best=283.0, Avg=-270.8\n",
-      "Generation 80: Best=283.0, Avg=-262.2\n",
-      "Generation 100: Best=283.0, Avg=-358.9\n",
-      "Generation 120: Best=283.0, Avg=-378.0\n",
-      "Generation 140: Best=283.0, Avg=-348.6\n",
-      "Generation 149: Best=283.0, Avg=-236.5\n",
-      "Execution time: 17.022 seconds\n",
-      "Best fitness: 283.0\n",
+      "Generation 0: Best=-4970.9, Avg=-9669.3\n",
+      "Generation 20: Best=283.0, Avg=-338.1\n",
+      "Generation 40: Best=283.0, Avg=-499.1\n",
+      "Generation 60: Best=398.0, Avg=-225.3\n",
+      "Generation 80: Best=398.0, Avg=-221.8\n",
+      "Generation 100: Best=398.0, Avg=-212.1\n",
+      "Generation 120: Best=398.0, Avg=-247.2\n",
+      "Generation 140: Best=398.0, Avg=-287.4\n",
+      "Generation 149: Best=398.0, Avg=-205.3\n",
+      "Execution time: 39.120 seconds\n",
+      "Best fitness: 398.0\n",
       "Found assignments: 14\n",
+      "New best result: fitness=398.0, gaps=151\n",
       "\n",
       "Trying parameter set 3/3\n",
       "\n",
@@ -628,25 +655,42 @@
       "Population size: 75\n",
       "Generations: 200\n",
       "Tasks: 14, People: 7\n",
-      "Generation 0: Best=-6891.3, Avg=-9457.9\n",
-      "Generation 20: Best=81.0, Avg=-3172.6\n",
-      "Generation 40: Best=279.0, Avg=-2484.4\n",
-      "Generation 60: Best=283.0, Avg=-2665.5\n",
-      "Generation 80: Best=283.0, Avg=-2288.6\n",
-      "Generation 100: Best=283.0, Avg=-2714.6\n",
-      "Generation 120: Best=283.0, Avg=-2354.4\n",
-      "Generation 140: Best=283.0, Avg=-2493.7\n",
-      "Generation 160: Best=283.0, Avg=-3298.2\n",
-      "Generation 180: Best=283.0, Avg=-2241.0\n",
-      "Generation 199: Best=283.0, Avg=-2403.2\n",
-      "Execution time: 16.430 seconds\n",
-      "Best fitness: 283.0\n",
+      "Generation 0: Best=-4148.1, Avg=-9546.8\n",
+      "Generation 20: Best=47.0, Avg=-2723.1\n",
+      "Generation 40: Best=398.0, Avg=-2765.1\n",
+      "Generation 60: Best=398.0, Avg=-2823.0\n",
+      "Generation 80: Best=398.0, Avg=-2367.0\n",
+      "Generation 100: Best=398.0, Avg=-2691.6\n",
+      "Generation 120: Best=398.0, Avg=-2693.4\n",
+      "Generation 140: Best=398.0, Avg=-2357.0\n",
+      "Generation 160: Best=398.0, Avg=-2719.9\n",
+      "Generation 180: Best=398.0, Avg=-2626.5\n",
+      "Generation 199: Best=398.0, Avg=-2750.3\n",
+      "Execution time: 36.845 seconds\n",
+      "Best fitness: 398.0\n",
       "Found assignments: 14\n",
       "\n",
       "Final Results:\n",
       "Total assignments: 14\n",
       "Total person-months: 36.8\n",
-      "Total workload: 5880.0 hours (assuming 160h/month)\n"
+      "Total workload: 5880.0 hours (assuming 160h/month)\n",
+      "\n",
+      "Assignment Results:\n",
+      "         task_name assigned_competency            name  person_months start_date end_date\n",
+      "       B(enchmark)                   B    Becker, Anna           0.50   01.11.25 31.12.25\n",
+      "           C(I/CD)                   C   Wagner, Lukas           0.50   01.12.25 31.01.26\n",
+      "    D(emonstrator)                   D   Keller, Jonas           2.00   01.12.25 31.01.26\n",
+      "     E(ntwicklung)                   E    Vogel, Peter           3.50   01.10.25 31.01.26\n",
+      "     F(einplanung)                   F    Braun, Maria           1.00   01.06.26 30.04.27\n",
+      "G(renzwertanalyse)                   G    Braun, Maria           5.00   01.11.25 31.08.26\n",
+      "     H(ilfesystem)                   H   Keller, Jonas           5.00   01.07.26 31.08.27\n",
+      " I(mplementierung)                   I    Becker, Anna           3.00   01.12.26 30.06.27\n",
+      "      J(ustierung)                   J    Becker, Anna           4.00   01.11.26 31.08.27\n",
+      "K(onzeptionierung)                   K   Keller, Jonas           3.00   01.01.27 31.05.27\n",
+      "        L(abeling)                   L Hoffmann, Laura           4.50   01.10.26 31.08.27\n",
+      " M(L-Modellierung)                   M    Braun, Maria           3.00   01.12.26 31.08.27\n",
+      " N(achbearbeitung)                   N    Becker, Anna           0.75   01.12.25 31.08.27\n",
+      "     O(ptimierung)                   O Hoffmann, Laura           1.00   01.12.25 31.08.27\n"
      ]
     }
    ],
@@ -657,76 +701,30 @@
     "print(f\"\\nFinal Results:\")\n",
     "print(f\"Total assignments: {len(results)}\")\n",
     "print(f\"Total person-months: {sum(item['person_months'] for item in results):.1f}\")\n",
-    "print(f\"Total workload: {sum(item['person_months'] for item in results) * 160:.1f} hours (assuming 160h/month)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "910d1c7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f\"Total workload: {sum(item['person_months'] for item in results) * 160:.1f} hours (assuming 160h/month)\")\n",
+    "\n",
+    "# Convert results to DataFrame\n",
+    "results_df = pd.DataFrame(results)\n",
+    "\n",
     "# Calculate gaps and add to results\n",
-    "gaps_per_person = calculate_gaps_between_tasks(results_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "b5b6a7b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gaps_per_person = calculate_gaps_between_tasks(results_df)\n",
+    "\n",
     "# Add gap information to each result\n",
     "for i, row in results_df.iterrows():\n",
     "    person_id = row['person_id']\n",
     "    if person_id in gaps_per_person:\n",
     "        results_df.at[i, 'total_gaps_days'] = gaps_per_person[person_id]\n",
     "    else:\n",
-    "        results_df.at[i, 'total_gaps_days'] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "622324fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Assignment Results:\n",
-      "         task_name assigned_competency            name  person_months start_date end_date\n",
-      "       B(enchmark)                   B    Becker, Anna           0.50   01.11.25 31.12.25\n",
-      "           C(I/CD)                   C   Wagner, Lukas           0.50   01.12.25 31.01.26\n",
-      "    D(emonstrator)                   D   Keller, Jonas           2.00   01.12.25 31.01.26\n",
-      "     E(ntwicklung)                   E    Vogel, Peter           3.50   01.10.25 31.01.26\n",
-      "     F(einplanung)                   F    Braun, Maria           1.00   01.06.26 30.04.27\n",
-      "G(renzwertanalyse)                   G    Braun, Maria           5.00   01.11.25 31.08.26\n",
-      "     H(ilfesystem)                   H   Wagner, Lukas           5.00   01.07.26 31.08.27\n",
-      " I(mplementierung)                   I    Becker, Anna           3.00   01.12.26 30.06.27\n",
-      "      J(ustierung)                   J    Braun, Maria           4.00   01.11.26 31.08.27\n",
-      "K(onzeptionierung)                   K   Keller, Jonas           3.00   01.01.27 31.05.27\n",
-      "        L(abeling)                   L Hoffmann, Laura           4.50   01.10.26 31.08.27\n",
-      " M(L-Modellierung)                   M    Braun, Maria           3.00   01.12.26 31.08.27\n",
-      " N(achbearbeitung)                   N    Becker, Anna           0.75   01.12.25 31.08.27\n",
-      "     O(ptimierung)                   O Hoffmann, Laura           1.00   01.12.25 31.08.27\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Display results in a nice table\n",
-    "results_df = pd.DataFrame(results)\n",
+    "        results_df.at[i, 'total_gaps_days'] = 0\n",
+    "\n",
+    "# Display results\n",
     "print(\"\\nAssignment Results:\")\n",
     "print(results_df[['task_name', 'assigned_competency', 'name', 'person_months', 'start_date', 'end_date']].to_string(index=False))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 76,
    "id": "08f08890",
    "metadata": {},
    "outputs": [
@@ -746,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 77,
    "id": "12cefbd7",
    "metadata": {},
    "outputs": [
